--- a/views/addStartup.ejs
+++ b/views/addStartup.ejs
@@ -10,6 +10,11 @@
     <h1>Add New StartUp</h1>
     <h3>Incubator name: <%= incubator.name %></h3>
 
+    <% if (errors && errors.length > 0) { %>
+        <p style="color: red; font-weight: bold;"><%= errors.join(", ") %></p>
+      <% } %>
+      
+
     <form action="/incubators/<%= incubator.id %>/startUp/add" method="POST">
       <div>
         <label for="">StartUp Name</label>
