completed task. Static data search in startup page working

--- a/views/incubatorDetails.ejs
+++ b/views/incubatorDetails.ejs
@@ -20,7 +20,7 @@
     <p>Click <a href="/incubators/<%= incubator.id %>/startUp/add">Add</a> to add StartUp</p>
 
     <% if (startups && startups.length > 0) { %>
-        <table border="1" cellpadding="5">
+        <table border="1px solid black">
           <thead>
             <tr>
               <th>Name</th>
