--- a/views/addIncubator.ejs
+++ b/views/addIncubator.ejs
@@ -4,44 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create Incubator</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
-  <body>
+  <body class="container">
     <%- include('partials/nav') %>
-    <h1>Create New Incubator</h1>
-    <h3>Please fill the form below to add a new Incubator!</h3>
 
-    <form action="/incubators/add" method="POST">
-      <div>
-        <label for="">The Name of The Incubator?</label>
-        <div>
-          <input type="text" name="name" />
+    <div class="mt-4">
+      <h1 class="mb-3">Create New Incubator</h1>
+      <h3 class="text-muted">Fill in the details below</h3>
+
+      <form action="/incubators/add" method="POST" class="mt-3">
+        <div class="mb-3">
+          <label class="form-label">Incubator Name</label>
+          <input type="text" name="name" class="form-control" />
         </div>
-      </div>
-      <br>
-      <div>
-        <label for="">The Location of The Incubator?</label>
-        <div>
-          <input type="text" name="location" />
+
+        <div class="mb-3">
+          <label class="form-label">Location</label>
+          <input type="text" name="location" class="form-control" />
         </div>
-      </div>
-      <br>
-      <div>
-        <label for="">The Level of The Incubator?</label>
-        <div>
-          <!-- <input type="text" name="education" /> -->
+
+        <div class="mb-3">
+          <label class="form-label">Level</label>
           <% levels.forEach((el) => { %>
-            <input type="radio" name="level" value="<%= el%>">
-            <label for="level-<%= el.toLowerCase() %>"><%= el %></label>
-            <%}) %>
-          </select>
+          <div class="form-check">
+            <input
+              type="radio"
+              class="form-check-input"
+              name="level"
+              value="<%= el %>"
+            />
+            <label class="form-check-label"><%= el %></label>
+          </div>
+          <% }) %>
         </div>
-      </div>
-      <br>
-      <div>
-        <input type="submit" value="Submit" />
-      </div>
-    </form>
 
-
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
   </body>
 </html>
