--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,30 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - Incubators</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
-  <body>
+  <body class="container">
     <%- include('partials/nav') %>
-    <h1>Homepage!</h1>
 
-    <table border="1px solid black">
-      <tr>
-        <th>Name</th>
-        <th>Code</th>
-        <th>Location</th>
-        <th>Level</th>
-        <th>Action</th>
-      </tr>
-      <% incubators.forEach((incubator) => {%>
-      <tr>
-        <td><%= incubator.name%></td>
-        <td><%= incubator.code%></td>
-        <td><%= incubator.location%></td>
-        <td><%= incubator.level%></td>
-        <td>
-          <a href="/incubators/<%= incubator.id%>">See Detail</a>
-        </td>
-      </tr>
-      <% })%>
-    </table>
+    <div class="mt-4">
+      <h1 class="mb-3">Homepage</h1>
+
+      <table class="table table-bordered">
+        <thead class="table-light">
+          <tr>
+            <th>Name</th>
+            <th>Code</th>
+            <th>Location</th>
+            <th>Level</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% incubators.forEach((incubator) => { %>
+          <tr>
+            <td><%= incubator.name %></td>
+            <td><%= incubator.code %></td>
+            <td><%= incubator.location %></td>
+            <td><%= incubator.level %></td>
+            <td>
+              <a href="/incubators/<%= incubator.id %>" class="btn btn-dark"
+                >See Detail</a
+              >
+            </td>
+          </tr>
+          <% }) %>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
