--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,17 +1,18 @@
-<nav>
-  <h1 style="display: inline-flex; margin: 5px 10px">The Incubator</h1>
-  <h2 style="display: inline-flex; margin: 0px 15px">|</h2>
-  <ul
-    style="
-      display: inline-flex;
-      gap: 10px;
-      list-style: none;
-      padding: 0px;
-      margin: 5px 0px;
-    "
-  >
-    <li><a href="/" class="button">Home</a></li>
-    <li><a href="/incubators/add" class="button">Add New Incubator</a></li>
-    <li><a href="/startUp" class="button">StartUps</a></li>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">The Incubator</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/incubators/add">Add New Incubator</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/startUp">StartUps</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
